--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ title                    : "Chen's Homepage"
 title_separator          : "-"
 name                     : &name "Chen Peng"
 description              : &description "Chen's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : https://chenpeng.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
+url                      : https://pchencecilia.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+baseurl                  : "/chenpeng.github.io" # the subpath of your site, e.g. "/blog"
 repository               : "pchencecilia/chenpeng.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
@@ -23,7 +23,7 @@ repository               : "pchencecilia/chenpeng.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "/images/chenpeng.JPG"
+  avatar           : "/chenpeng.github.io/images/chenpeng.JPG"
   name             : "Dr Chen Peng (彭琛)"
   # pronouns         : # example: "she/her"  
   # bio              : "Short biography for the left-hand sidebar"
