--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "pchencecilia/pchencecilia.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "https://pchencecilia.github.io/images/chenpengnew.jpeg"
+  avatar           : "chenpengnew.jpeg"
   name             : "Dr Chen Peng (彭琛)"
   # pronouns         : # example: "she/her"  
   # bio              : "Short biography for the left-hand sidebar"
